feat: add operation intelligence knowledge graph support